Project

General

Profile

Actions

Bug #52901

closed

osd/scrub: setting then clearing noscrub may lock a PG in 'scrubbing' state

Added by Ronen Friedman over 2 years ago. Updated about 2 years ago.

Status:
Resolved
Priority:
Normal
Category:
Scrub/Repair
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Recent scrub scheduling code errs in (at one location) incorrectly considering noscrub as not
precluding deep-scrub.

Actions #1

Updated by Ronen Friedman over 2 years ago

  • Subject changed from osd/scrub: setting then clearing noscrub may lock a PG in 'scrubbing' state "forever" to osd/scrub: setting then clearing noscrub may lock a PG in 'scrubbing' state
  • Status changed from New to Fix Under Review
  • Pull request ID set to 43521
Actions #2

Updated by Ronen Friedman over 2 years ago

Easy to reproduce: set noscrub, then request a deep-scrub. That will get the PG's Scrubber state-machine
stuck in such a way, that no further scrubs will be possible - even after the noscrub is released.

Happens in teuthology tests, too.

With the fix - cannot be reproduced by the sequence above.

Actions #3

Updated by Neha Ojha over 2 years ago

  • Status changed from Fix Under Review to Resolved
Actions #4

Updated by Ronen Friedman over 2 years ago

A test to detect this specific bug pushed as PR 43919

Actions #5

Updated by André Cruz about 2 years ago

Will this be backported to a stable release?

Actions

Also available in: Atom PDF