osd/scrub: fix the handling of deep-scrub when noscrub is set

Recent scrub scheduling code errs in (at one location) incorrectly considering noscrub as not
precluding deep-scrub.

Fixes: https://tracker.ceph.com/issues/52901
Signed-off-by: Ronen Friedman <rfriedma@redhat.com>